www/css/app.css
/* app css stylesheet */

* {
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
    -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
    -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
    -webkit-user-select: none;                  /* prevent selecting text */
    -ms-content-zooming: none;                  /* disable zooming (WP) */
}

.menu {
    list-style: none;
    border-bottom: 0.1em solid black;
    margin-bottom: 2em;
    padding: 0 0 0.5em;
}

#extraInfo{
    height: 100px;
    overflow: scroll;
    font-size: 14px;
}

.hiddenBlock{
    display: none;
}

.menu:before {
    content: "[";
}

.menu:after {
    content: "]";
}

.menu > li {
    display: inline;
}

.menu > li:before {
    content: "|";
    padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
    content: "";
    padding: 0;
}
.savePasswordText{
    font-size: 1.2em;
}
.list_overflow{
    height:250px;
    width:90%;
    text-align: center;
    overflow:scroll;
}

.list_overflow_y{
    height:300px;
    text-align: center;
    overflow-y:scroll;
}

.list_overflow_y_100{
    height:100%;
    text-align: center;
    overflow-y:scroll;
}

.list_proposals{
    height:300px;
    overflow-y: scroll;
}

.float-right{
    float:right;
}

.float-left{
    float:left;
}

.float-comment{
    float:right;
    margin-right: 20%;
}
.heightPercent{
    height:100%;
}
.widthPercent{
    width: 100%;
}
.width70Percent{
    width:70%;
}
.width50Percent{
    width:50%;
}
.width40Percent{
    width:40%;
}
.width30Percent{
    width:33.33%;
}
.settingsLabels {
    font-size: 1.1em;
    font-weight: normal;
    min-width: 40px;
}
.icasaCheckbox{
    position: relative;
    display: inline-block;
    background-repeat: no-repeat;
}

.icasaCheckbox-normal{
    height: 25px;
    background-size:25px 25px;
    padding-left: 25px;
}

.icasaCheckbox-step2{
    background-size:25px 25px;
    padding-left: 25px; 
    background-position:10px 10px;
}

.icasaCheckbox-large{
    height:45px;
    width: 45px;
    background-size:45px 45px;
}

.icasaCheckboxChecked{
    background-image: url('../img/checkbox1.png');
}
.icasaCheckboxUnChecked{
    background-image: url('../img/checkbox0.png');
}
.icasa-appointment-selected{
    color: white;
    background-color: #3044B5;
}

#serverImg{
    width: 42px;
    height: 60px;
}

#step3LoadingSpinner{
    text-align: center;
    font-size: 30px;
}

.proposalInfoText{
    background-color: #5cb85c !important;
    border-color: #4cae4c;
    color: white;
    
    /* color: #3c763d; */
    /* background-color: #dff0d8 !important; */
}

.widthSettingsLabels {
    width: 130px;
}
.width25Percent{
    width:25%;
}
.height80Percent{
    height: 90%;
}
.height80Percent{
    height: 80%;
}
.height70Percent{
    height:70%;
}
.height75Percent{
    height:75%;
}
.height60Percent{
    height: 60%;
}
.height50Percent{
    height: 50%;
}
.height20Percent{
    height: 20%;
}
.height10Percent{
    height: 10%;
}
.calendarWrapper{
    height:100%;
}
.calendarHeight{
    height: 100%;
}

#doctorCalendar{
    max-height:100%;
    overflow-y:scroll; 
}
.savePassword{
    width:10%;
    height:10%;
}
.shortcutButtons{
    display: block;
    text-align: center;
    width: 100%;
    height: 100%;
    margin-bottom: 50px;
}

.shortcutButton{
    height: 100px;
    width: 30%;
}
.languageButton{
    height: 100px;
    width: 33.33%;
}
.languages{
    margin-bottom: 10px;
}
.dateAndCalendar{
    margin:10px 5px 30px 5px;
}

.colorMarking{
    padding-top: 10px;
    padding-right: -10px;
}

.colorWrapper{
    width: 15%;
    height: 100%;
}

.reservationTitle{
    text-align: left;
    font-size:0.6em;
    font-weight: bold;
}

.reservationHour{
    text-align: left;
    font-size: 0.7em;
}

.reservationIcon{
    display: inline-block;
    float:right;
    width:40px;
}

.reservationIconBoundary{
   padding-right: 10px;
}

.detailTitle{
    font-weight: bold;
    font-size: 1.3em;
}

.detailInfo{
    width: 60%;
    font-size: 1.3em;
    display: table-cell;
}

.dayButtonWidth{
    width:14%;
}

.detailTableRow{
    display: table-row;
}

.detailTable{
    display: table;
}

.todayWrapper{
    text-align: center;
    float:right;
}
.cellcontent{
    font-size:18px;
    overflow:hidden;
}
.settingsCellcontent h1{
    font-size: 1.4em;
}
.settingsCellcontentDetail{
    text-align: center;
    font-size: 1.4em;
}
.tableLabel{
    font-size: 1.1em;
    padding-top: 10px;
}
.tablePlaceHolder{
    padding: 9px 14px;
    height:50px;
    width: 100%;
    max-width: 100px;
    min-width:10px;
}
table td {
    border-top: none;
}

.clearboth{
    clear:both;
}
.filterText{
    padding-left: 15px;
    color: black;
    font-size: 1.3em;
}
.filterTitle{
    font-size: 1.5em;
}

.day-filter-group .btn-group .btn-default{
    text-decoration: line-through;
}
.day-filter-group .btn-group .btn-default:active,
.day-filter-group .btn-group .btn-default.active,
.day-filter-group .btn-group .open .dropdown-toggle.btn-default {
    text-decoration: none;
}

/*http://stackoverflow.com/questions/15305914/bootstrap-buttons-get-stuck-down-on-mobile-devices*/
.mobileHoverFix:hover,
.mobileHoverFix.hover{
    background-position: 0 0px;
}

@-webkit-keyframes spinning
{
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(360deg);}
}

@keyframes spinning
{
    from {transform: rotate(0deg);}
    to {transform: rotate(360deg);}
}

.has-spinner .glyphicon-refresh {
    -webkit-animation: spinning 1s linear infinite;
    animation: spinning 1s linear infinite;
}
.dateAppointmentsView{
    padding-top:0px;
    display: inline-block;
    margin-bottom:10px;
}

.dateAppointmentsView h1{
    margin: 0px;
    font-size:1.8em;
}

.spinnerApointmentsCalendar{
    float: left;
    margin: 10px 10px;
}

#weekendBtn{
    font-size: 18px;
}
#todayBtn{
    font-size: 18px;
}

.title{
    position: absolute;
    width: 50%;
    left:25%;
    text-align: center;
    font-size:25px;
    padding-top: 15px;
    padding-right: 0.5%;
    padding-bottom:10px;
}
.nextAndPrevCalendar{
    display: inline-block;
}

ul{
    margin: 0;
    padding: 0;
    list-style-type: none;
}
ul li{
    display: inline;
}

.icasaLogo{
    width: 80px;
    height: auto;
    position: absolute;
    right: 10px;
    top: 20px;
}

.AcceleratedList {
    -webkit-overflow-scrolling: touch;
    -webkit-transform: translate3d(0, 0, 0);
}

.AppointmentsListFill {
    position: absolute;
    top: 180px;
    bottom: 50px;
}

.AppointmentsListFillPatient {
    position: absolute;
    top: 80px;
    bottom: 5px;
    left: 15px;
    right: 15px;
}

.patientAppointment {
    text-align: left;
    font-size: 1.2em;
}

.btn-appointments-filter{
    height: 50px;
    position: absolute;
    right: 130px;
    top: 0;
}

.btn-appointments-filter .glyphicon-filter{
    font-size: 20px;
    color: black;   
}

.connection-status{
    display: inline;
    font-size: 15px;
    position: relative;
}

.positionRelative{
    position: relative;
}

.connection-status .glyphicon-remove{
    color: red;
}

.formLabel{
    font-size: 1.1em;
}
    
.appointmentFormTable{
    border-spacing: 10px; 
    border-collapse:separate;
    width:100%;
}

.appointmentFormTable tr td{
    width: 90%;
}

.appointmentFormTable tr td:first-child{
    width: 10%;
}

@-webkit-keyframes slideInRight {
    from {-webkit-transform: translate3d(100%,0,0); }
    to {-webkit-transform: translate3d(0,0,0); }
}

@keyframes slideInRight {
    from {transform: translate3d(100%,0,0); }
    to {transform: translate3d(0,0,0); }
}

@-webkit-keyframes slideInLeft {
    from {-webkit-transform: translate3d(-100%,0,0); }
    to {-webkit-transform: translate3d(0,0,0); }
}

@keyframes slideInLeft {
    from {transform: translate3d(-100%,0,0); }
    to {transform: translate3d(0,0,0); }
}

@-webkit-keyframes slideOutLeft {
    to { -webkit-transform: translate3d(-100%,0,0); }
}

@keyframes slideOutLeft {
    to { transform: translate3d(-100%,0,0); }
}

@-webkit-keyframes slideOutRight {
    to { -webkit-transform: translate3d(100%,0,0); }
}

@keyframes slideOutRight {
    to { transform: translate3d(100%,0,0); }
}

.page{
	bottom:0; 
	position:absolute; 
	top:0;  
	width:100%; 
}

.page.ng-enter { 
    z-index: 8888; 
}

.page.ng-leave { 
    z-index: 9999; 
}

/*animate*/  
.right-to-left.ng-enter,  
.right-to-left.ng-leave,  
.left-to-right.ng-enter,  
.left-to-right.ng-leave {  
    position: absolute;  
    top: 0; right: 0; bottom: 0; left: 0;  
    background: inherit;  
    -ms-transition: 0.7s ease-in-out;  
    -webkit-transition: 0.7s ease-in-out;  
    transition:  0.7s ease-in-out;  
}  
.right-to-left.ng-enter {  
    -webkit-transform: translateX(100%);  
    transform: translateX(100%);  
}  
.right-to-left.ng-enter.ng-enter-active {  
    -webkit-transform: translateX(0);  
    transform: translateX(0);  
}  
.right-to-left.ng-leave {  
    -webkit-transform: translateX(0);  
    transform: translateX(0);  
}  
.right-to-left.ng-leave.ng-leave-active {  
    -webkit-transform: translateX(-100%);  
    transform: translateX(-100%);  
}  
.left-to-right.ng-enter {  
    -webkit-transform: translateX(-100%);  
    transform: translateX(-100%);  
}  
.left-to-right.ng-enter.ng-enter-active {  
    -webkit-transform: translateX(0);  
    transform: translateX(0);  
}  
.left-to-right.ng-leave {  
    -webkit-transform: translateX(0);  
    transform: translateX(0);  
}  
.left-to-right.ng-leave.ng-leave-active {  
    -webkit-transform: translateX(100%);  
    transform: translateX(100%);  
}  

.datePickCalendar td {
    width: 1%;
}

.hideDiv {
    display: none !important;
}

.mainMenuButtonArea{
    position: relative;
    width: 300px;
    margin-left: -150px;
    left: 50%;
}
.mainMenuButtonArea .btn-xl{
    background-color: #3044B5;
    color: white;
}
.mainMenuButtonArea .btn-xl:active{
    background-color: white;
    color: #3044B5;
}

.reservationTable th {
    border-bottom: 2px solid #ddd;
}

.reservationTable td {
    border-top: 1px solid #ddd;
}
.showCompleteFloat {
    overflow: hidden;
}

.line-through-text{
    text-decoration: line-through;
}

@media screen and (min-width: 768px) {
    .settingsLabels {
        font-size: 1.2em;
        font-weight: normal;
        min-width: 130px;
    }
}


@media screen and (min-width: 768px) {
    #serverImg {
        width: 64px;
        height: 90px;
    }
}

@media screen and (max-width: 768px) {
    .title{
        font-size: 20px;
    }
    .icasaLogo{
        width: 70px;
        top: 22px;
    }
    ul{
        width:100%;
    }
    ul li a{
        width: 30%;
    }
}

@media screen and (min-width: 768px) {
    ul{
        width:43%;
    }
    ul li{
        width: 33%;
    }
    ul li a{
        font-size: 15px;
        width: 100%;
    }
}

@media screen and (max-width: 400px) {// Smartphones in portrait mode  
    .dateAppointmentsViewScaled{
        width: 100px;
    }
    #todayBtn{
        font-size: 12px;
    }
    #weekendBtn{
        font-size: 12px;
    }
}


@media screen and (min-width: 400px) {
    .formLabel{
        font-size: 1.5em;
    }
    .patientAppointment{
        font-size: 1.6em;
    }
}

@media screen and (min-width: 768px) {
    .detailTitle{
        font-weight: bold;
        font-size: 1.8em;
        width: 40%;
        display: table-cell;
    }

    .detailInfo{
        width: 60%;
        font-size: 1.8em;
        display: table-cell;
    }
}

